do not force org.microg.nlp as location provider, but extend the list of allowed location providers AND sign with the same keys as local build Unified.apk

--- a/src/main/res/values/config.xml
+++ b/src/main/res/values/config.xml
@@ -10,10 +10,10 @@ SPDX-License-Identifier: Apache-2.0
         <item>org.microg.nlp</item>
     </string-array>
 
-    <bool name="config_enableNetworkLocationOverlay">false</bool>
+    <bool name="config_enableNetworkLocationOverlay">true</bool>
     <string name="config_networkLocationProviderPackageName">org.microg.nlp</string>
 
-    <bool name="config_enableGeocoderOverlay">false</bool>
+    <bool name="config_enableGeocoderOverlay">true</bool>
     <string name="config_geocoderProviderPackageName">org.microg.nlp</string>
 
 <!--
