--- a/src/main/res/values/config.xml
+++ b/src/main/res/values/config.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+SPDX-FileCopyrightText: 2021, Greenflash1986 aka Samuel
+SPDX-License-Identifier: Apache-2.0
+-->
 <resources>
     <string-array name="config_locationProviderPackageNames">
         <item>com.google.android.gms</item>
